# psycopg

./: .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: 3rd-party-tests.yml  lint.yml  packages-pool.yml  packages-src.yml  tests.yml
docs/: Makefile  README.rst  release.rst
psycopg/: README.rst
psycopg_c/: README.rst
psycopg_pool/: README.rst
tests/: test_cursor_async.py  test_cursor_client_async.py
tools/: async_to_sync.py  update_backer.py
tools/ci/: ci_test.sh  wheel_win32_before_build.bat
tools/ci/pg_config_vcpkg_stub/pg_config_vcpkg_stub/: __init__.py
tools/isort-psycopg/: pyproject.toml
