[project]
name = "psycopg-dev"
version = "0"
description = "Development workspace for the Psycopg repository"
requires-python = ">=3.10"
dependencies = [
    "psycopg",
    "psycopg-pool",
]

[build-system]
requires = ["setuptools>=49.2.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]
test = [
    "psycopg[test]",
    "psycopg-pool[test]",
]
lint = [
    "psycopg[dev]",
]
docs = [
    "psycopg[docs]",
]
c = [
    "psycopg-c",
]
dns = [
    "dnspython >= 2.1",
]
gevent = [
    "gevent",
]
numpy = [
    "numpy",
]
postgis = [
    "shapely",
]
sqlalchemy = [
    "greenlet",
    "pytest >= 6.2.5",
    "pytest-xdist",
]

[tool.uv]
package = false
default-groups = ["dev"]
resolution = "highest"

[tool.uv.sources]
psycopg = { path = "psycopg", editable = true }
psycopg-c = { path = "psycopg_c" }
psycopg-pool = { path = "psycopg_pool", editable = true }
isort-psycopg = { path = "tools/isort-psycopg", editable = true }

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error",
]
testpaths=[
    "tests",
]
# Note: On Travis they these options seem to leak objects
# log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)s:%(filename)s:%(lineno)d %(message)s"
# log_level = "DEBUG"

[tool.coverage.run]
source = [
    "psycopg/psycopg",
    "psycopg_pool/psycopg_pool",
]
[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    '\.\.\.$',
]

[tool.mypy]
files = [
    "psycopg/psycopg",
    "psycopg_pool/psycopg_pool",
    "psycopg_c/psycopg_c",
    "tests",
]
warn_unused_ignores = true
show_error_codes = true
disable_bytearray_promotion = true
disable_memoryview_promotion = true
strict = true
exclude = '''(?x)(
    ^ docs/lib/.*\.py
    | tests/test_tstring\.py
)'''

# Don't use SQLite cache as it highlights Mypy concurrency issues.
# See https://github.com/python/mypy/issues/21136
# The issue is triggered by parallel mypy runs under pre-commit, setting
# the parameter here allows the use of the same cache both by pre-commit and
# every other Mypy usage.
#
# Check https://github.com/python/mypy/issues/13916 in the future to see
# if new ways to run mypy under pre-commit emerge.
sqlite_cache = false

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "polib",
    "shapely.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "scrap.*",
]
check_untyped_defs = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.codespell]
ignore-words-list = "alot,ans,ba,fo,te,erro,varning,perfor"
skip = "build,_build,.tox,.mypy_cache,.venv,pq.c,_psycopg.c,*.html"

[tool.isort]
profile = "black"
length_sort = true
multi_line_output = 9
sort_order = "psycopg"  # requires the isort-psycopg module

[tool.black]
force_exclude = "tests/test_tstring.py"
